antlr/JinjaParser.cpp

// Generated from antlr/Jinja.g4 by ANTLR 4.7.2


#include "JinjaVisitor.h"

#include "JinjaParser.h"


using namespace antlrcpp;
using namespace ajinja;
using namespace antlr4;

JinjaParser::JinjaParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

JinjaParser::~JinjaParser() {
  delete _interpreter;
}

std::string JinjaParser::getGrammarFileName() const {
  return "Jinja.g4";
}

const std::vector<std::string>& JinjaParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& JinjaParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- JinjaTemplateContext ------------------------------------------------------------------

JinjaParser::JinjaTemplateContext::JinjaTemplateContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> JinjaParser::JinjaTemplateContext::TEXT() {
  return getTokens(JinjaParser::TEXT);
}

tree::TerminalNode* JinjaParser::JinjaTemplateContext::TEXT(size_t i) {
  return getToken(JinjaParser::TEXT, i);
}

std::vector<JinjaParser::StatementContext *> JinjaParser::JinjaTemplateContext::statement() {
  return getRuleContexts<JinjaParser::StatementContext>();
}

JinjaParser::StatementContext* JinjaParser::JinjaTemplateContext::statement(size_t i) {
  return getRuleContext<JinjaParser::StatementContext>(i);
}

std::vector<JinjaParser::ExpressionContext *> JinjaParser::JinjaTemplateContext::expression() {
  return getRuleContexts<JinjaParser::ExpressionContext>();
}

JinjaParser::ExpressionContext* JinjaParser::JinjaTemplateContext::expression(size_t i) {
  return getRuleContext<JinjaParser::ExpressionContext>(i);
}

std::vector<tree::TerminalNode *> JinjaParser::JinjaTemplateContext::WS() {
  return getTokens(JinjaParser::WS);
}

tree::TerminalNode* JinjaParser::JinjaTemplateContext::WS(size_t i) {
  return getToken(JinjaParser::WS, i);
}


size_t JinjaParser::JinjaTemplateContext::getRuleIndex() const {
  return JinjaParser::RuleJinjaTemplate;
}

antlrcpp::Any JinjaParser::JinjaTemplateContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JinjaVisitor*>(visitor))
    return parserVisitor->visitJinjaTemplate(this);
  else
    return visitor->visitChildren(this);
}

JinjaParser::JinjaTemplateContext* JinjaParser::jinjaTemplate() {
  JinjaTemplateContext *_localctx = _tracker.createInstance<JinjaTemplateContext>(_ctx, getState());
  enterRule(_localctx, 0, JinjaParser::RuleJinjaTemplate);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(44);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(42);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
          case JinjaParser::TEXT: {
            setState(30);
            match(JinjaParser::TEXT);
            break;
          }

          case JinjaParser::T__2: {
            setState(31);
            statement();
            break;
          }

          case JinjaParser::T__0: {
            setState(32);
            match(JinjaParser::T__0);
            setState(34);
            _errHandler->sync(this);

            _la = _input->LA(1);
            if (_la == JinjaParser::WS) {
              setState(33);
              match(JinjaParser::WS);
            }
            setState(36);
            expression();
            setState(38);
            _errHandler->sync(this);

            _la = _input->LA(1);
            if (_la == JinjaParser::WS) {
              setState(37);
              match(JinjaParser::WS);
            }
            setState(40);
            match(JinjaParser::T__1);
            break;
          }

        default:
          throw NoViableAltException(this);
        } 
      }
      setState(46);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

JinjaParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

JinjaParser::IfStatementContext* JinjaParser::StatementContext::ifStatement() {
  return getRuleContext<JinjaParser::IfStatementContext>(0);
}

JinjaParser::ForStatementContext* JinjaParser::StatementContext::forStatement() {
  return getRuleContext<JinjaParser::ForStatementContext>(0);
}

JinjaParser::SetStatementContext* JinjaParser::StatementContext::setStatement() {
  return getRuleContext<JinjaParser::SetStatementContext>(0);
}


size_t JinjaParser::StatementContext::getRuleIndex() const {
  return JinjaParser::RuleStatement;
}

antlrcpp::Any JinjaParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JinjaVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

JinjaParser::StatementContext* JinjaParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, JinjaParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(50);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(47);
      ifStatement();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(48);
      forStatement();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(49);
      setStatement();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfStatementContext ------------------------------------------------------------------

JinjaParser::IfStatementContext::IfStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> JinjaParser::IfStatementContext::WS() {
  return getTokens(JinjaParser::WS);
}

tree::TerminalNode* JinjaParser::IfStatementContext::WS(size_t i) {
  return getToken(JinjaParser::WS, i);
}

std::vector<JinjaParser::ExpressionContext *> JinjaParser::IfStatementContext::expression() {
  return getRuleContexts<JinjaParser::ExpressionContext>();
}

JinjaParser::ExpressionContext* JinjaParser::IfStatementContext::expression(size_t i) {
  return getRuleContext<JinjaParser::ExpressionContext>(i);
}

std::vector<JinjaParser::JinjaTemplateContext *> JinjaParser::IfStatementContext::jinjaTemplate() {
  return getRuleContexts<JinjaParser::JinjaTemplateContext>();
}

JinjaParser::JinjaTemplateContext* JinjaParser::IfStatementContext::jinjaTemplate(size_t i) {
  return getRuleContext<JinjaParser::JinjaTemplateContext>(i);
}


size_t JinjaParser::IfStatementContext::getRuleIndex() const {
  return JinjaParser::RuleIfStatement;
}

antlrcpp::Any JinjaParser::IfStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JinjaVisitor*>(visitor))
    return parserVisitor->visitIfStatement(this);
  else
    return visitor->visitChildren(this);
}

JinjaParser::IfStatementContext* JinjaParser::ifStatement() {
  IfStatementContext *_localctx = _tracker.createInstance<IfStatementContext>(_ctx, getState());
  enterRule(_localctx, 4, JinjaParser::RuleIfStatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(52);
    match(JinjaParser::T__2);
    setState(54);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == JinjaParser::WS) {
      setState(53);
      match(JinjaParser::WS);
    }
    setState(56);
    match(JinjaParser::T__3);
    setState(57);
    match(JinjaParser::WS);
    setState(58);
    expression();
    setState(60);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == JinjaParser::WS) {
      setState(59);
      match(JinjaParser::WS);
    }
    setState(62);
    match(JinjaParser::T__4);
    setState(63);
    jinjaTemplate();
    setState(79);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(64);
        match(JinjaParser::T__2);
        setState(66);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == JinjaParser::WS) {
          setState(65);
          match(JinjaParser::WS);
        }
        setState(68);
        match(JinjaParser::T__5);
        setState(69);
        match(JinjaParser::WS);
        setState(70);
        expression();
        setState(72);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == JinjaParser::WS) {
          setState(71);
          match(JinjaParser::WS);
        }
        setState(74);
        match(JinjaParser::T__4);
        setState(75);
        jinjaTemplate(); 
      }
      setState(81);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
    }
    setState(90);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx)) {
    case 1: {
      setState(82);
      match(JinjaParser::T__2);
      setState(84);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == JinjaParser::WS) {
        setState(83);
        match(JinjaParser::WS);
      }
      setState(86);
      match(JinjaParser::T__6);
      setState(87);
      match(JinjaParser::WS);
      setState(88);
      match(JinjaParser::T__4);
      setState(89);
      jinjaTemplate();
      break;
    }

    }
    setState(92);
    match(JinjaParser::T__2);
    setState(94);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == JinjaParser::WS) {
      setState(93);
      match(JinjaParser::WS);
    }
    setState(96);
    match(JinjaParser::T__7);
    setState(98);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == JinjaParser::WS) {
      setState(97);
      match(JinjaParser::WS);
    }
    setState(100);
    match(JinjaParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ForStatementContext ------------------------------------------------------------------

JinjaParser::ForStatementContext::ForStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> JinjaParser::ForStatementContext::WS() {
  return getTokens(JinjaParser::WS);
}

tree::TerminalNode* JinjaParser::ForStatementContext::WS(size_t i) {
  return getToken(JinjaParser::WS, i);
}

tree::TerminalNode* JinjaParser::ForStatementContext::ID() {
  return getToken(JinjaParser::ID, 0);
}

JinjaParser::ExpressionContext* JinjaParser::ForStatementContext::expression() {
  return getRuleContext<JinjaParser::ExpressionContext>(0);
}

JinjaParser::JinjaTemplateContext* JinjaParser::ForStatementContext::jinjaTemplate() {
  return getRuleContext<JinjaParser::JinjaTemplateContext>(0);
}


size_t JinjaParser::ForStatementContext::getRuleIndex() const {
  return JinjaParser::RuleForStatement;
}

antlrcpp::Any JinjaParser::ForStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JinjaVisitor*>(visitor))
    return parserVisitor->visitForStatement(this);
  else
    return visitor->visitChildren(this);
}

JinjaParser::ForStatementContext* JinjaParser::forStatement() {
  ForStatementContext *_localctx = _tracker.createInstance<ForStatementContext>(_ctx, getState());
  enterRule(_localctx, 6, JinjaParser::RuleForStatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(102);
    match(JinjaParser::T__2);
    setState(104);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == JinjaParser::WS) {
      setState(103);
      match(JinjaParser::WS);
    }
    setState(106);
    match(JinjaParser::T__8);
    setState(107);
    match(JinjaParser::WS);
    setState(108);
    match(JinjaParser::ID);
    setState(109);
    match(JinjaParser::WS);
    setState(110);
    match(JinjaParser::T__9);
    setState(111);
    match(JinjaParser::WS);
    setState(112);
    expression();
    setState(114);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == JinjaParser::WS) {
      setState(113);
      match(JinjaParser::WS);
    }
    setState(116);
    match(JinjaParser::T__4);
    setState(117);
    jinjaTemplate();
    setState(118);
    match(JinjaParser::T__2);
    setState(120);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == JinjaParser::WS) {
      setState(119);
      match(JinjaParser::WS);
    }
    setState(122);
    match(JinjaParser::T__10);
    setState(124);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == JinjaParser::WS) {
      setState(123);
      match(JinjaParser::WS);
    }
    setState(126);
    match(JinjaParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SetStatementContext ------------------------------------------------------------------

JinjaParser::SetStatementContext::SetStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> JinjaParser::SetStatementContext::WS() {
  return getTokens(JinjaParser::WS);
}

tree::TerminalNode* JinjaParser::SetStatementContext::WS(size_t i) {
  return getToken(JinjaParser::WS, i);
}

tree::TerminalNode* JinjaParser::SetStatementContext::ID() {
  return getToken(JinjaParser::ID, 0);
}

JinjaParser::ExpressionContext* JinjaParser::SetStatementContext::expression() {
  return getRuleContext<JinjaParser::ExpressionContext>(0);
}


size_t JinjaParser::SetStatementContext::getRuleIndex() const {
  return JinjaParser::RuleSetStatement;
}

antlrcpp::Any JinjaParser::SetStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JinjaVisitor*>(visitor))
    return parserVisitor->visitSetStatement(this);
  else
    return visitor->visitChildren(this);
}

JinjaParser::SetStatementContext* JinjaParser::setStatement() {
  SetStatementContext *_localctx = _tracker.createInstance<SetStatementContext>(_ctx, getState());
  enterRule(_localctx, 8, JinjaParser::RuleSetStatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(128);
    match(JinjaParser::T__2);
    setState(130);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == JinjaParser::WS) {
      setState(129);
      match(JinjaParser::WS);
    }
    setState(132);
    match(JinjaParser::T__11);
    setState(133);
    match(JinjaParser::WS);
    setState(134);
    match(JinjaParser::ID);
    setState(136);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == JinjaParser::WS) {
      setState(135);
      match(JinjaParser::WS);
    }
    setState(138);
    match(JinjaParser::T__12);
    setState(140);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == JinjaParser::WS) {
      setState(139);
      match(JinjaParser::WS);
    }
    setState(142);
    expression();
    setState(144);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == JinjaParser::WS) {
      setState(143);
      match(JinjaParser::WS);
    }
    setState(146);
    match(JinjaParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

JinjaParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

JinjaParser::ArithmeticExpressionContext* JinjaParser::ExpressionContext::arithmeticExpression() {
  return getRuleContext<JinjaParser::ArithmeticExpressionContext>(0);
}

JinjaParser::LogicalExpressionContext* JinjaParser::ExpressionContext::logicalExpression() {
  return getRuleContext<JinjaParser::LogicalExpressionContext>(0);
}

JinjaParser::FunctionCallContext* JinjaParser::ExpressionContext::functionCall() {
  return getRuleContext<JinjaParser::FunctionCallContext>(0);
}

JinjaParser::LiteralExpressionContext* JinjaParser::ExpressionContext::literalExpression() {
  return getRuleContext<JinjaParser::LiteralExpressionContext>(0);
}

tree::TerminalNode* JinjaParser::ExpressionContext::ID() {
  return getToken(JinjaParser::ID, 0);
}


size_t JinjaParser::ExpressionContext::getRuleIndex() const {
  return JinjaParser::RuleExpression;
}

antlrcpp::Any JinjaParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JinjaVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}

JinjaParser::ExpressionContext* JinjaParser::expression() {
  ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, getState());
  enterRule(_localctx, 10, JinjaParser::RuleExpression);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(153);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 22, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(148);
      arithmeticExpression();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(149);
      logicalExpression();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(150);
      functionCall();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(151);
      literalExpression();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(152);
      match(JinjaParser::ID);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArithmeticExpressionContext ------------------------------------------------------------------

JinjaParser::ArithmeticExpressionContext::ArithmeticExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<JinjaParser::ArithmeticTermContext *> JinjaParser::ArithmeticExpressionContext::arithmeticTerm() {
  return getRuleContexts<JinjaParser::ArithmeticTermContext>();
}

JinjaParser::ArithmeticTermContext* JinjaParser::ArithmeticExpressionContext::arithmeticTerm(size_t i) {
  return getRuleContext<JinjaParser::ArithmeticTermContext>(i);
}


size_t JinjaParser::ArithmeticExpressionContext::getRuleIndex() const {
  return JinjaParser::RuleArithmeticExpression;
}

antlrcpp::Any JinjaParser::ArithmeticExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JinjaVisitor*>(visitor))
    return parserVisitor->visitArithmeticExpression(this);
  else
    return visitor->visitChildren(this);
}

JinjaParser::ArithmeticExpressionContext* JinjaParser::arithmeticExpression() {
  ArithmeticExpressionContext *_localctx = _tracker.createInstance<ArithmeticExpressionContext>(_ctx, getState());
  enterRule(_localctx, 12, JinjaParser::RuleArithmeticExpression);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(155);
    arithmeticTerm();
    setState(160);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == JinjaParser::T__13

    || _la == JinjaParser::T__14) {
      setState(156);
      _la = _input->LA(1);
      if (!(_la == JinjaParser::T__13

      || _la == JinjaParser::T__14)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(157);
      arithmeticTerm();
      setState(162);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArithmeticTermContext ------------------------------------------------------------------

JinjaParser::ArithmeticTermContext::ArithmeticTermContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<JinjaParser::ArithmeticFactorContext *> JinjaParser::ArithmeticTermContext::arithmeticFactor() {
  return getRuleContexts<JinjaParser::ArithmeticFactorContext>();
}

JinjaParser::ArithmeticFactorContext* JinjaParser::ArithmeticTermContext::arithmeticFactor(size_t i) {
  return getRuleContext<JinjaParser::ArithmeticFactorContext>(i);
}


size_t JinjaParser::ArithmeticTermContext::getRuleIndex() const {
  return JinjaParser::RuleArithmeticTerm;
}

antlrcpp::Any JinjaParser::ArithmeticTermContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JinjaVisitor*>(visitor))
    return parserVisitor->visitArithmeticTerm(this);
  else
    return visitor->visitChildren(this);
}

JinjaParser::ArithmeticTermContext* JinjaParser::arithmeticTerm() {
  ArithmeticTermContext *_localctx = _tracker.createInstance<ArithmeticTermContext>(_ctx, getState());
  enterRule(_localctx, 14, JinjaParser::RuleArithmeticTerm);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(163);
    arithmeticFactor();
    setState(168);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == JinjaParser::T__15

    || _la == JinjaParser::T__16) {
      setState(164);
      _la = _input->LA(1);
      if (!(_la == JinjaParser::T__15

      || _la == JinjaParser::T__16)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(165);
      arithmeticFactor();
      setState(170);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArithmeticFactorContext ------------------------------------------------------------------

JinjaParser::ArithmeticFactorContext::ArithmeticFactorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

JinjaParser::ArithmeticExpressionContext* JinjaParser::ArithmeticFactorContext::arithmeticExpression() {
  return getRuleContext<JinjaParser::ArithmeticExpressionContext>(0);
}

tree::TerminalNode* JinjaParser::ArithmeticFactorContext::NUMBER() {
  return getToken(JinjaParser::NUMBER, 0);
}

tree::TerminalNode* JinjaParser::ArithmeticFactorContext::ID() {
  return getToken(JinjaParser::ID, 0);
}


size_t JinjaParser::ArithmeticFactorContext::getRuleIndex() const {
  return JinjaParser::RuleArithmeticFactor;
}

antlrcpp::Any JinjaParser::ArithmeticFactorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JinjaVisitor*>(visitor))
    return parserVisitor->visitArithmeticFactor(this);
  else
    return visitor->visitChildren(this);
}

JinjaParser::ArithmeticFactorContext* JinjaParser::arithmeticFactor() {
  ArithmeticFactorContext *_localctx = _tracker.createInstance<ArithmeticFactorContext>(_ctx, getState());
  enterRule(_localctx, 16, JinjaParser::RuleArithmeticFactor);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(177);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case JinjaParser::T__17: {
        enterOuterAlt(_localctx, 1);
        setState(171);
        match(JinjaParser::T__17);
        setState(172);
        arithmeticExpression();
        setState(173);
        match(JinjaParser::T__18);
        break;
      }

      case JinjaParser::NUMBER: {
        enterOuterAlt(_localctx, 2);
        setState(175);
        match(JinjaParser::NUMBER);
        break;
      }

      case JinjaParser::ID: {
        enterOuterAlt(_localctx, 3);
        setState(176);
        match(JinjaParser::ID);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LogicalExpressionContext ------------------------------------------------------------------

JinjaParser::LogicalExpressionContext::LogicalExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<JinjaParser::LogicalTermContext *> JinjaParser::LogicalExpressionContext::logicalTerm() {
  return getRuleContexts<JinjaParser::LogicalTermContext>();
}

JinjaParser::LogicalTermContext* JinjaParser::LogicalExpressionContext::logicalTerm(size_t i) {
  return getRuleContext<JinjaParser::LogicalTermContext>(i);
}


size_t JinjaParser::LogicalExpressionContext::getRuleIndex() const {
  return JinjaParser::RuleLogicalExpression;
}

antlrcpp::Any JinjaParser::LogicalExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JinjaVisitor*>(visitor))
    return parserVisitor->visitLogicalExpression(this);
  else
    return visitor->visitChildren(this);
}

JinjaParser::LogicalExpressionContext* JinjaParser::logicalExpression() {
  LogicalExpressionContext *_localctx = _tracker.createInstance<LogicalExpressionContext>(_ctx, getState());
  enterRule(_localctx, 18, JinjaParser::RuleLogicalExpression);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(179);
    logicalTerm();
    setState(184);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == JinjaParser::T__19) {
      setState(180);
      match(JinjaParser::T__19);
      setState(181);
      logicalTerm();
      setState(186);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LogicalTermContext ------------------------------------------------------------------

JinjaParser::LogicalTermContext::LogicalTermContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<JinjaParser::LogicalFactorContext *> JinjaParser::LogicalTermContext::logicalFactor() {
  return getRuleContexts<JinjaParser::LogicalFactorContext>();
}

JinjaParser::LogicalFactorContext* JinjaParser::LogicalTermContext::logicalFactor(size_t i) {
  return getRuleContext<JinjaParser::LogicalFactorContext>(i);
}


size_t JinjaParser::LogicalTermContext::getRuleIndex() const {
  return JinjaParser::RuleLogicalTerm;
}

antlrcpp::Any JinjaParser::LogicalTermContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<JinjaVisitor*>(visitor))
    return parserVisitor->visitLogicalTerm(this);
  else
    return visitor->visitChildren(this);
}

JinjaParser::LogicalTermContext* JinjaParser::logicalTerm() {
  LogicalTermContext *_localctx = _tracker.createInstance<LogicalTermContext>(_ctx, getState());
  enterRule(_localctx, 20, JinjaParser::RuleLogicalTerm);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(187);
    logicalFactor();
    setState(192);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == JinjaParser::T__20) {
      setState(188);
      match(JinjaParser::T__20);
      setState(189);
      logicalFactor();
      setState(194);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LogicalFactorContext ------------------------------------------------------------------

JinjaParser::LogicalFactorContext::LogicalFactorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

JinjaParser::LogicalFactorContext* JinjaParser::LogicalFactorContext::logicalFactor() {
  return getRuleContext<JinjaParser::LogicalFactorContext>(0);
}

JinjaParser::LogicalExpressionContext* JinjaParser::LogicalFactorContext::logicalExpression() {
  return getRuleContext<JinjaParser::LogicalExpressionContext>(0);
}

JinjaParser::ComparisonExpressionContext* JinjaParser::LogicalFactorContext::comparisonExpression() {
  return getRuleContext<JinjaParser::ComparisonExpressionContext>(0);
}
